# golem-certificate

./: .gitignore  Cargo.toml  README.md
.ci/: pack-build.sh
.github/workflows/: release.yml  rust.yml
cli/: Cargo.toml  README.md
cli/src/: app.rs  main.rs  smartcard.rs  ui.rs  utils.rs
cli/src/ui/: app.rs  blob.rs  certificate.rs  component.rs  display_details.rs  document_editor.rs  edit_utils.rs  editors.rs  keypair.rs  main_menu.rs  modal.rs  multiple_choice.rs  node_descriptor.rs  open_file_dialog.rs  save_file_dialog.rs  scrollable_text.rs  text_input.rs  util.rs  verify_document.rs
cli/src/ui/editors/: key.rs  key_usage.rs  node_id.rs  permissions.rs  public_key.rs  signature.rs  subject.rs  validity_period.rs
examples/js/: README.md  index.js  package-lock.json  package.json
jcs/: Cargo.toml  build.rs
jcs/src/: jcs.rs
jcs/tests/: basic_types.rs  number_formatting.rs  testdata.rs  tests_from_rfc_text.rs
src/: constraints.rs  cryptography.rs  error.rs  key_usage.rs  lib.rs  permissions.rs  schemas.rs  serde_utils.rs  time_constraints.rs  utils.rs  validation_error.rs  validator.rs  validity.rs
src/constraints/: validator.rs
src/key_usage/: validator.rs
src/permissions/: validator.rs
src/permissions/validator/: outbound.rs
src/schemas/: certificate.rs  node_descriptor.rs  node_permissions.rs  permissions.rs  signature.rs  signed_envelope.rs  subject.rs  validity_period.rs  validity_periods.rs
src/schemas/certificate/: key_usage.rs
src/schemas/certificate/key_usage/: validator.rs
src/schemas/permissions/: validator.rs
src/schemas/permissions/validator/: outbound.rs
src/schemas/validity_period/: validator.rs
src/schemas/validity_periods/: validator.rs
src/serde_jcs/: README.md  entry.rs  mod.rs  serializer.rs
src/time_constraints/: validator.rs
src/validator/: certificate_descriptor.rs  error.rs  success.rs  validated_data.rs  validation_checks.rs
src/validity/: validator.rs
src/validity_periods/: validator.rs
tests/: read_partner_certificate.rs  validate.rs  validate_certificate.rs  validate_node_descriptor.rs
tests/resources/: happy_path_node_descriptor.json  node_descriptor_expired.signed.json
tests/resources/certificate/: cert_cannot_sign_other_cert.signed.json  expired.signed.json  extended_validity_period.signed.json  happy_path.signed.json  happy_path_smartcard_leaf.signed.json  happy_path_smartcard_root.signed.json  invalid_key_usage.signed.json  invalid_permissions.signed.json  invalid_public_key.signed.json  invalid_signature.signed.json  not_signed.json
tests/resources/node_descriptor/: cert_cannot_sign_node.signed.json  expired.signed.json  invalid_cert_chain_signature.signed.json  invalid_permissions_chain.signed.json  invalid_signature.signed.json  not_signed.json
