[package]
name = "golem-certificate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
serde = "1.0"
serde_json = { version = "1.0", features = ["preserve_order", "raw_value"] }
url = { version = "2.2", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
ya-client-model = "0.5"

[dev-dependencies]
test-case = "3.0"
pretty_assertions = "1.3"
