[package]
name = "golem-certificate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = "1"
hex = "0.4.3"
pbkdf2 = "0.11"
rand = "0.7"
ryu-js = { version = "0.2", default-features = false }
sha2 = "0.10.6"
sha3 = "0.10.6"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
url = { version = "2.2", features = ["serde"] }
ya-client-model = "0.5"

[dev-dependencies]
test-case = "3.0"
pretty_assertions = { version = "1.3", features = ["unstable"] }

[workspace]
members = [
    "cli",
    "jcs",
]
