[package]
name = "golem-certificate-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.1.4", features = ["derive"] }
ed25519-dalek = "1"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }

crossterm = "0.26.1"
tui = { package = "ratatui", version = "0.21.0" }
tui-tree-widget = "0.12.0"

golem-certificate = { path = "../" }
