[package]
name = "golem-certificate-cli"
version = "0.1.0"
description = "Golem Certificate command line utility"
authors = ["Golem Factory <contact@golem.network>"]
license = "GPL-3.0"
edition = "2021"

[features]
default = ["tui"]
tui = ["dep:crossterm", "dep:tui", "dep:url", "dep:ya-client-model"]
smartcard = ["dep:openpgp-card", "dep:openpgp-card-pcsc", "dep:rpassword"]

[dependencies]
golem-certificate = { path = "../" }

anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.1.4", features = ["derive"] }
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }

crossterm = { version = "0.26.1", optional = true }
tui = { package = "ratatui", version = "0.21.0", optional = true }
url = { version = "2.3", features = ["serde"], optional = true }
ya-client-model = { version = "0.7", optional = true }

openpgp-card = { version = "0.3.5", optional = true }
openpgp-card-pcsc = { version = "0.3.1", optional = true }
rpassword = { version = "7.2.0", optional = true }
